<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1"
        >
        <item
            android:id="@+id/notificationItem"
            android:icon="@drawable/ic_baseline_notifications_24"
            android:title="@string/notification"
            />
        <item
            android:id="@+id/bottomSheetItem"
            android:icon="@drawable/ic_baseline_auto_awesome_mosaic_24"
            android:title="@string/bottom_sheets" />
        <item
            android:id="@+id/popUpItem"
            android:icon="@drawable/ic_baseline_window_24"
            android:title="@string/pop_ups" />

        <item
            android:id="@+id/RecyclerView"
            android:icon="@drawable/ic_baseline_recycling_24"
            android:title="@string/recyclerview"
            />
    </group>

    <group
        android:id="@+id/group2">
        <item
            android:id="@+id/item4"
            android:title="@string/api_content">
            <menu>

                <item
                    android:id="@+id/viewPager"
                    android:icon="@drawable/ic_baseline_table_chart_24"
                    android:title="@string/viewpager"
                    />
            </menu>
        </item>
    </group>

</menu>